Changes to contact us page
Added some changes to the contact us page.

--- a/contact.html
+++ b/contact.html
@@ -27,15 +27,18 @@
 
  <main>
     Contact Page!!
-<div class="needhelp">
-    <h2>Need Help?</h2>
-    <img src="images/customerservice.png" class="customerservice-img" alt="Customer service person">
-    <p>contact@gamehub.com</p>
-    <p>+47 123 45 678</p>
-    <p>Drammensveien, 0148 Oslo</p>
+<div class="contactus">    
+    <div class="needhelp">
+        <img src="images/customerservice.png" class="customerservice-img" alt="Customer service person">
+        <h1>Need Help?</h1>
+        <p>contact@gamehub.com</p>
+        <p>+47 123 45 678</p>
+        <p>Drammensveien, 0148 Oslo</p>
+        <div class="circlecontact"></div>
+    </div>
+    
 
     <div class="formbox">
-        <div class="circlecontact"></div>
         <label for="name">Fullname</label>
         <input type="text" class="fullname"></input>
         <label for="email">Email</label>
