--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,6 @@
     </header>
 
  <main>
-    Contact Page!!
 <div class="contactus">    
     <div class="needhelp">
         <img src="images/customerservice.png" class="customerservice-img" alt="Customer service person">
@@ -44,7 +43,7 @@
         <label for="email">Email</label>
         <input type="text" class="email"></input>
         <label for="text" class="message">Message us here: </label>
-        <textarea></textarea>
+        <textarea id="message" rows="8" cols="50"></textarea>
         <button>Submit</button>
     </div>
 </div>
