--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/about.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
     <title>GameHub | About Us</title>
 </head>
@@ -32,7 +33,7 @@
                 This gaming marketplace lets you buy tons of video games online for any device. 
                 GameHub is a competitively priced website with a huge range of games.</p>
 
-                <img src="images/GameHub_LogoNEW.png">
+                <img src="images/GameHub_LogoNEW.png" class="gamehub-logo">
 
 
             <h1>Fast, Reliable & Easy</h1>
@@ -57,4 +58,53 @@
         </main>
 </body>
 
+
+
+<footer class="footer">
+    <div class="container">
+        <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo" class="footerImage">
+    <div class="lineBottom"></div>
+        <div class="row">
+            <div class="footer-col">
+                <h4>Information</h4>
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Our Services</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Affiliate Program</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Get Help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Shipping</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Payment Options</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Shopping</h4>
+                <ul>
+                    <li><a href="#">Play Station Games</a></li>
+                    <li><a href="#">PC Games</a></li>
+                    <li><a href="#">XBox Games</a></li>
+                    <li><a href="#">Nintendo Wii Games</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Follow us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            
+        </div>
+        
+        <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
+    </div>
+</footer>
 </html>
