Updates to the index page
Made some changes to index, added its own css stylesheet and made some efforts into starting the header section of the site.

--- a/Comments.html
+++ b/Comments.html
@@ -1,4 +1,11 @@
 <!--
+
+hero section: 
+
+<img class="heroImages" id="heroimage2" src="images/Just_Dance_Game_Free_Download.jpg" alt="Featured Games - Slide 2">
+<img class="heroImages" id="heroimage3" src="images/space-games-poster-900x563.webp" alt="Featured Games - Slide 3">
+
+
 <footer>
         
         <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo" class="footerImage">
