--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
 </head>
@@ -26,25 +27,36 @@
     </header>
 
 <main>
-<section>
-    
-<img class="heroImages" id="heroimage1" src="images/high-resolution-gaming-i59azpzf73j6wqgk.jpg" alt="Featured Games - Slide 1">
-<img class="heroImages" id="heroimage2" src="images/Just_Dance_Game_Free_Download.jpg" alt="Featured Games - Slide 2">
-<img class="heroImages" id="heroimage3" src="images/space-games-poster-900x563.webp" alt="Featured Games - Slide 3">
-</section>
+<div class="banner">
+<div class="release-info">Early 2024</div>  
+<div class="release-title">Assassin</div>
+<img class="heroImages" id="heroimage1" src="images/high-resolution-gaming-i59azpzf73j6wqgk.jpg" alt="Featured new game release">
+<div class="playbtn"><a href="#" class="playlink" id="playnow">Preorder now!</a></div>
+</div>
+
 
 
 <section>
 <div>
-    <h1>THE ULTIMATE GAMING HUB</h1>
+    <h1>The ultimate gaming marketplace</h1>
 
 
     <img src="images/personplaying.jpg" alt="Person playing on a PC" class="personPlaying">
-    <h1>THE UNIVERSE OF GAMES</h1>
+    <h1>The universe of games</h1>
  </div>
+
+<div class="information-line">
+    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" style="color: #ff7a00;"></i>Very Fast</section>
+    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" style="color: #ff7a00;"></i>Protected Privacy</section>
+    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" style="color: #ff7a00;"></i>Customer Support</section>
+</div>
+
+ 
 </section>
 
 <section>
+
+    <!-- Make 4 divs instead of 2. topleft, topright, bottomleft, bottomright and then style the images so they center align and it looks good. -->
     <div class="bottomleft">
         <img src="images/game1.jpg" class="bottomCta" alt="Assassin featured game on offer">
         <img src="images/game2.jpg" class="bottomCta" alt="Cyberpunk featured game on offer">
