--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
 </head>
 <body>
     <header>
+        <input type="checkbox" id="nav-checkbox">
+        <label for="nav-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Games</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="viewcart.html"><img src="images/basket.png" class="basket" alt="View shopping cart"></a></li> 
+                <a href="index.html">Home</a>
+                <a href="products.html">Games</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </ul>
         </nav>
     </header>
-
 <main>
 <div class="banner">
 <div class="release-info">Early 2024</div>  
 <div class="release-title">Assassin</div>
-<img class="heroImages" id="heroimage1" src="images/high-resolution-gaming-i59azpzf73j6wqgk.jpg" alt="Featured new game release">
+<img class="preorder-img"src="images/high-resolution-gaming-i59azpzf73j6wqgk.jpg" alt="Featured new game release">
 <div class="playbtn"><a href="#" class="playlink" id="playnow">Preorder now!</a></div>
 </div>
 
@@ -56,7 +56,7 @@
 
 <section>
 
-    <!-- Make 4 divs instead of 2. topleft, topright, bottomleft, bottomright and then style the images so they center align and it looks good. -->
+    <!-- Make 4 divs instead of 2. topleft, topright, bottomleft, bottomright and then style the images so they center align and it looks good. 
     <div class="bottomleft">
         <img src="images/game1.jpg" class="bottomCta" alt="Assassin featured game on offer">
         <img src="images/game2.jpg" class="bottomCta" alt="Cyberpunk featured game on offer">
@@ -67,7 +67,7 @@
     </div>
     <br />
 </section>
- 
+-->
 
 
 
@@ -105,17 +105,7 @@
                     <li><a href="#">XBox Games</a></li>
                     <li><a href="#">Nintendo Wii Games</a></li>
                 </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Follow us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>
-            
+            </div>  
         </div>
         
         <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
