--- a/products.html
+++ b/products.html
@@ -8,26 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
     <title>GameHub | Games</title>
 
 </head>
 <body>
-  
     <header>
+        <input type="checkbox" id="nav-checkbox">
+        <label for="nav-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Games</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="viewcart.html"><img src="images/basket.png"></a></li> 
+                <a href="index.html">Home</a>
+                <a href="products.html">Games</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </ul>
         </nav>
     </header>
-
 <main>
-    <img class="productPageOffer" src="images/Cyberpunk 2077 Feature Image.jpeg" alt="Featured Games">
+
 
     <h1>Product Page!</h1>
 
