Changes to index
Made some changes to index.html. This page is not completed.

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
 </div>
 </div>
-
+<div class="contactus-container">
 <div class="contactus">    
     <div class="needhelp">
         <img src="images/customerservice.png" class="customerservice-img" alt="Customer service person">
@@ -79,8 +79,8 @@
         <textarea id="message"></textarea>
         <button class="submit-contact">Submit</button>
     </div>
+    </div>
 </div>
-
  </main>   
  <footer class="footer">
     <div class="container">
