--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         </nav>
     </header>
 <main>
-<div class="banner">
-<div class="release-info">Early 2024</div>  
-<div class="release-title">Assassin</div>
-<img class="preorder-img"src="images/high-resolution-gaming-i59azpzf73j6wqgk.jpg" alt="Featured new game release">
-<div class="playbtn"><a href="#" class="playlink" id="playnow">Preorder now!</a></div>
+    <div class="banner">
+        <img src="images/assassin-banner2.png" alt="Assassin Game Banner" class="banner-image" />
+        <div class="banner-text">
+            <h2>Assassin</h2>
+            <h3>Through rough winds</h3>
+            <button id="btn">Buy</button><h3>$49.99</h3>
+        </div>
+    </div>
 </div>
 
-
-
-<section>
-<div>
+     <!--
     <h1>The ultimate gaming marketplace</h1>
 
 
@@ -56,7 +56,7 @@
 
 <section>
 
-    <!-- Make 4 divs instead of 2. topleft, topright, bottomleft, bottomright and then style the images so they center align and it looks good. 
+   Make 4 divs instead of 2. topleft, topright, bottomleft, bottomright and then style the images so they center align and it looks good. 
     <div class="bottomleft">
         <img src="images/game1.jpg" class="bottomCta" alt="Assassin featured game on offer">
         <img src="images/game2.jpg" class="bottomCta" alt="Cyberpunk featured game on offer">
