Contact page completed
Finished the contact page and made it responsive.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
     </div>
 </div>
 
+<div class="information-line">
+    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" style="color: #ff7a00;"></i>Very Fast</section>
+    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" style="color: #ff7a00;"></i>Protected Privacy</section>
+    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" style="color: #ff7a00;"></i>Customer Support</section>
+</div>
+
+
+
      <!--
     <h1>The ultimate gaming marketplace</h1>
 
