Started products page
Started on the products page

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,6 @@
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
                 <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            </ul>
         </nav>
     </header>
 
@@ -41,11 +40,11 @@
         </div>
         <div class="formbox">
             <label for="name">Fullname</label>
-            <input type="text" class="fullname" alt="Your full name here"></input>
+            <input type="text" class="fullname" placeholder="Name here">
             <label for="email">Email</label>
-            <input type="text" class="email" alt="Your email adress here" ></input>
-            <label for="text" class="message" alt="Type a message to customer service here so we can assist you with your issue">Message</label>
-            <textarea id="message"></textarea>
+            <input type="text" class="email" placeholder="Email adress here">
+            <label for="text" class="message">Message</label>
+            <textarea id="message" placeholder="Input message here"></textarea>
             <button class="submit-btn" id="btn">Send</button>
         </div>
     </div>
