--- a/products.html
+++ b/products.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/products.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
     <title>GameHub | Games</title>
@@ -30,20 +31,28 @@
 
 
     <h1>Product Page!</h1>
-
-
     <section>
-        <img src="images/GameHub_covers.jpg" class="productImage" alt="Ping Pong Championship, from age 3+">
-        <img src="images/GameHub_covers2.jpg" class="productImage" alt="Super Duper, from age 3+">
-        <img src="images/GameHub_covers3.jpg" class="productImage" alt="Black, from age 18+">
-        <img src="images/GameHub_covers4.jpg" class="productImage" alt="Furious, from age 16+">
-        <img src="images/GameHub_covers5.jpg" class="productImage" alt="Assassin, from age 16+">
-        <img src="images/GameHub_covers6.jpg" class="productImage" alt="Space War, from age 16+">
-        <img src="images/GameHub_covers7.jpg" class="productImage" alt="Racing, from age 16+">
-        <img src="images/GameHub_covers8.jpg" class="productImage" alt="Boxer, from age 16+">
-        <img src="images/GameHub_covers9.jpg" class="productImage" alt="Cyberpunk, from age 16+">
-        <img src="images/GameHub_covers10.jpg" class="productImage" alt="Forge Legend, from age 16+">
+        <div class="product-container">
+            <div class="product">
+        <img src="images/GameHub_covers.jpg" class="productImage" id="game1" alt="Ping Pong Championship, from age 3+">
+            <div class="product-options">
+                <h3>Ping Pong</h3>
+                <h2>$49</h2>
+                <button class="product-btn">Add to cart</button>
+                <button class="product-btn">Buy now</button>
+            </div>
+        </div>
         
+        <img src="images/GameHub_covers2.jpg" class="productImage" id="game2" alt="Super Duper, from age 3+">
+        <img src="images/GameHub_covers3.jpg" class="productImage" id="game3" alt="Black, from age 18+">
+        <img src="images/GameHub_covers4.jpg" class="productImage" id="game4" alt="Furious, from age 16+">
+        <img src="images/GameHub_covers5.jpg" class="productImage" id="game5" alt="Assassin, from age 16+">
+        <img src="images/GameHub_covers6.jpg" class="productImage" id="game6" alt="Space War, from age 16+">
+        <img src="images/GameHub_covers7.jpg" class="productImage" id="game7" alt="Racing, from age 16+">
+        <img src="images/GameHub_covers8.jpg" class="productImage" id="game8" alt="Boxer, from age 16+">
+        <img src="images/GameHub_covers9.jpg" class="productImage" id="game9" alt="Cyberpunk, from age 16+">
+        <img src="images/GameHub_covers10.jpg" class="productImage" id="game10" alt="Forge Legend, from age 16+">
+    </div>
     
     </section>
 </main>
