Updates on several things
Made some tweaks to the contact page.
Added a confirmation for a submitted message for contact form.
Made the products list page responsive.
Did some minor updates to the index page

--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,13 @@
             <p>Drammensveien 33</p></div>
         </div>
         <div class="formbox">
-            <label for="name">Fullname</label>
+            <label for="name">Name</label>
             <input type="text" class="fullname" placeholder="Name here">
             <label for="email">Email</label>
             <input type="text" class="email" placeholder="Email adress here">
             <label for="text" class="message">Message</label>
-            <textarea id="message" placeholder="Input message here"></textarea>
-            <button class="submit-btn" id="btn">Send</button>
+            <textarea id="message" class="messagebox" placeholder="Input message here"></textarea>
+            <a href="contactus-confirm.html"><button class="submit-btn" id="btn">Send</button></a>
         </div>
     </div>
 </div>
