--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </header>
 <main>
     <div class="banner">
-        <img src="images/assassin-banner2.png" alt="Assassin Game Banner" class="banner-image" />
+        <div class="image-border">
+        <img src="images/assassin-banner2.png" alt="Assassin Game Banner" class="banner-image" /></div>
         <div class="banner-text">
             <h2>Assassin</h2>
             <h3>Through rough winds</h3>
@@ -38,12 +39,19 @@
 </div>
 
 <div class="information-line">
-    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" style="color: #ff7a00;"></i>Very Fast</section>
-    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" style="color: #ff7a00;"></i>Protected Privacy</section>
-    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" style="color: #ff7a00;"></i>Customer Support</section>
+    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icons"></i>Very Fast</section>
+    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icons"></i>Protected Privacy</section>
+    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icons"></i>Customer Support</section>
 </div>
 
 
+
+<ul class="carousel">
+    <li class="item"><img src="images/GameHub_covers.jpg" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers5.jpg" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers7.jpg" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers9.jpg" class="carousel-img"></li>
+</ul>
 
      <!--
     <h1>The ultimate gaming marketplace</h1>
