Specific product page
Made the product specific page wich is the page when customer clicks on a product to view more.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="homepage" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The universal site to buy games on, come and see for yourself!">
     <title>GameHub | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,28 +22,34 @@
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            </ul>
+                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>   
         </nav>
     </header>
 <main>
     <div class="banner">
         <div class="image-border">
-        <img src="images/assassin-banner2.png" alt="Assassin Game Banner" class="banner-image" /></div>
-        <div class="banner-text">
+            <img src="images/assassin-banner2.png" alt="Assassin Game Banner" class="banner-image" /></div>
+            <div class="banner-text">
             <h2>Assassin</h2>
             <h3>Through rough winds</h3>
-            <button id="btn">Buy</button><h3>$49.99</h3>
+            <a href="product-page.html"><button id="btn">Buy</button></a><h3>$49</h3>
+            </div>
         </div>
     </div>
-</div>
 
+<div class="orange-breakline"></div>
 <div class="information-line">
-    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icons"></i>Very Fast</section>
-    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icons"></i>Protected Privacy</section>
-    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icons"></i>Customer Support</section>
+    <div class="download-info">
+    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icons"></i><h3>Very Fast</h3><p>Download & Play</p></section>
+    </div>
+    <div class="privacy-info">
+    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icons"></i><h3>Protected Privacy</h3><p>We value your privacy</p></section>
+    </div>
+    <div class="customersupport-info">
+    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icons"></i><h3>Customer Support</h3><p>We are here to help you</p></section>
+    </div>
 </div>
-
+<div class="orange-breakline"></div>
 
 
 <ul class="carousel">
