--- a/products.html
+++ b/products.html
@@ -33,8 +33,8 @@
     <h1>List of games</h1>
 <section>
     <div class="product-container">
-        <div class="game game-1"><img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="productImage">
-        <h3>Ping Pong</h3>
+        <div class="game game-1"><a href="product-page.html"><img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="productImage">
+        <h3>Ping Pong</h3></a>
         <button class="products-btn" id="cart-btn">Add to cart</button>
         <button class="products-btn" id="buy-btn">Buy now</button></div>
         <div class="game game-2"><img src="images/GameHub_covers2.jpg" alt="Super Duper" class="productImage">
