--- a/viewcart.html
+++ b/viewcart.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/viewcart.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>GameHub | View Cart</title>
@@ -26,11 +27,55 @@
     </nav>
 </header>
  <main>
-  <h2>Product</h2>
-  <h2>Price</h2>
-  <h2>QTY</h2>
-  <h2>Unit Price</h2>
+
+
+  <div class="cart-container">
+        <div class="product-title">Product</div>
+        <div class="price-title">Price</div>
+        <div class="price-title">QTY</div>
+        <div class="unit-price">Unit Price</div>
+        </div>
+    </div>
+</div>
+
+  <div class="orange-breakline"></div>
+
+  <button class="delete-product">X</button>
+  <img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="cart-img1">
   
+  $49
+  <button class="remove-product">-</button>
+  <button class="add-product">+</button>
+
+  <div class="orange-breakline"></div>
+
+  <button class="delete-product">X</button>
+  <img src="images/GameHub_covers9.jpg" alt="Ping Pong Championship" class="cart-img1">
+  <button class="remove-product">-</button>
+  $49
+  <button class="add-product">+</button>
+
+  <div class="orange-breakline"></div>
+
+
+  <input type="text" alt="Voucher Code - add code to recieve your offered price" placeholder="Voucher Code"></input>
+  <button class="submit">Submit</button>
+  
+  <div class="total-amount-container">
+    <div class="payment-information">
+    Subtotal: $73,5
+    Taxes: $24,5
+    Amount: $98
+    Voucher: None
+  </div>
+</div>
+  <div class="orange-breakline-total">
+
+ 
+
+  <button class="confirm-btn">Confirm Order</button>
+</div>
+
  </main>   
 
 </body>
