--- a/viewcart.html
+++ b/viewcart.html
@@ -28,53 +28,45 @@
 </header>
  <main>
 
+    <!- Make a dropdown menu for picking amount since JS is out of the window. 
+    Maybe check out Komplett.no for reference on the cart page for the product listed in the cart and make it look sort of similar. 
+    
+    
+    -!>
 
-  <div class="cart-container">
-        <div class="product-title">Product</div>
-        <div class="price-title">Price</div>
-        <div class="price-title">QTY</div>
-        <div class="unit-price">Unit Price</div>
+
+    <div class="basket-container">
+        <div class="basket-options">GameHub Basket</div> 
+        <div class="cart-links"><a href="#">Save as wish list</a> - <a href="#">Empty Cart</a></div>
+    </div>
+
+        <div class="basket-sections">
+            <div class="section-name">Quantity</div>
+            <div class="section-name">Price</div>
+            <div class="section-name">Total</div>
+        </div>
+
+<div class="game-container">
+    <div class="basket-img">
+    <img src="images/GameHub_covers.jpg" alt="Ping Pong Championship">
+    </div>
+
+    <div class="game-quantity">
+        <div class="button-bg">
+        <button class="quantity-btn">-</button>
+        1
+        <button class="quantity-btn">+</button>
         </div>
     </div>
+    <div class="product-price">$49</div>
+    <div class="total-price">$49</div>
 </div>
 
-  <div class="orange-breakline"></div>
-
-  <button class="delete-product">X</button>
-  <img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="cart-img1">
-  
-  $49
-  <button class="remove-product">-</button>
-  <button class="add-product">+</button>
-
-  <div class="orange-breakline"></div>
-
-  <button class="delete-product">X</button>
-  <img src="images/GameHub_covers9.jpg" alt="Ping Pong Championship" class="cart-img1">
-  <button class="remove-product">-</button>
-  $49
-  <button class="add-product">+</button>
-
-  <div class="orange-breakline"></div>
 
 
-  <input type="text" alt="Voucher Code - add code to recieve your offered price" placeholder="Voucher Code"></input>
-  <button class="submit">Submit</button>
-  
-  <div class="total-amount-container">
-    <div class="payment-information">
-    Subtotal: $73,5
-    Taxes: $24,5
-    Amount: $98
-    Voucher: None
-  </div>
-</div>
-  <div class="orange-breakline-total">
 
- 
 
-  <button class="confirm-btn">Confirm Order</button>
-</div>
+
 
  </main>   
 
