Almost completed checkout page
Page is 98% complete now! Just minor changes needed to make it look better on mobile

--- a/viewcart.html
+++ b/viewcart.html
@@ -111,12 +111,13 @@
     <button class="discount-btn">Claim</button>
 </div>
 <div class="checkout-container">
-    <div class="subtotal">Subtotal <div class="subtotalsum">$49</div></div>
-    <div class="discount-amount">Discount <div class="discountsum">$0</div></div>
-    <div class="totalamount-checkout">Total <div class="totalsum">$49</div></div>
+    <div class="subtotal">Subtotal $49</div>
+    <div class="discount-amount">Discount $0</div>
+    <div class="totalamount-checkout">Total $49</div>
     <div class="checkoutline"></div>
     <button class="checkout-btn">Checkout</button>
 </div>
+
 
  </main>   
 
