--- a/contactus-confirm.html
+++ b/contactus-confirm.html
@@ -35,42 +35,50 @@
 </div>
     
 </main>
-    <footer class="footer">
-        <div class="container">
-            <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo" class="footerImage">
-        <div class="lineBottom"></div>
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Information</h4>
-                    <ul>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Affiliate Program</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Get Help</h4>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Shipping</a></li>
-                        <li><a href="#">Returns</a></li>
-                        <li><a href="#">Payment Options</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Shopping</h4>
-                    <ul>
-                        <li><a href="#">Play Station Games</a></li>
-                        <li><a href="#">PC Games</a></li>
-                        <li><a href="#">XBox Games</a></li>
-                        <li><a href="#">Nintendo Wii Games</a></li>
-                    </ul>
-                </div>  
-            </div>
-            
-            <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
+<footer>
+    <div class="logo-footer">
+        <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
+    <hr>
+    <div class="footer-row">
+        <div class="footer-column">
+            <h4>Information</h4>
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Affiliate Program</a></li>
+            </ul>
         </div>
-    </footer>
+        <div class="footer-column">
+            <h4>Get Help</h4>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Shipping</a></li>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Payment Options</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+        <h4>Shopping</h4>
+            <ul>
+                <li><a href="#">Play Station Games</a></li>
+                <li><a href="#">PC Games</a></li>
+                <li><a href="#">XBox Games</a></li>
+                <li><a href="#">Nintendo Wii Games</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+        <h4>Get Help</h4>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Shipping</a></li>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Payment Options</a></li>
+            </ul>
+        </div>
+    </div>    
+    </div>
+    <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
+</footer>
     </body>
     </html>
