--- a/paymentoptions.html
+++ b/paymentoptions.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/paymentselection.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>GameHub | Shipping</title>
+    <title>GameHub | Adress</title>
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
 <div class="progressbar-payment">    
     <a href="viewcart.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
     <a href="index.html"><i class="fa-solid fa-xmark" id="x-mark"></i></a>
-    <h2>Make Payment</h2>
+    <h1>Make Payment</h1>
     <div class="one">1</div>
     <div class="orangeline"></div>
     <div class="two">2</div>
@@ -72,57 +72,54 @@
     </div>
 </div>
 <a href="payment-info.html"><button class="payment-btn">Go to Payment</button>
-</div>
 </section>
 
 
 </main>
 </body>
-<footer class="footer">
-    <div class="container">
-        <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo" class="footerImage">
-    <div class="lineBottom"></div>
-        <div class="row">
-            <div class="footer-col">
-                <h4>Information</h4>
-                <ul>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Affiliate Program</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Get Help</h4>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Shipping</a></li>
-                    <li><a href="#">Returns</a></li>
-                    <li><a href="#">Payment Options</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Shopping</h4>
-                <ul>
-                    <li><a href="#">Play Station Games</a></li>
-                    <li><a href="#">PC Games</a></li>
-                    <li><a href="#">XBox Games</a></li>
-                    <li><a href="#">Nintendo Wii Games</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Follow us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>
-            
+<footer>
+    <div class="logo-footer">
+        <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
+    <hr>
+    <div class="footer-row">
+        <div class="footer-column">
+            <h4>Information</h4>
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Affiliate Program</a></li>
+            </ul>
         </div>
-        
-        <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
+        <div class="footer-column">
+            <h4>Get Help</h4>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Shipping</a></li>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Payment Options</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+        <h4>Shopping</h4>
+            <ul>
+                <li><a href="#">Play Station Games</a></li>
+                <li><a href="#">PC Games</a></li>
+                <li><a href="#">XBox Games</a></li>
+                <li><a href="#">Nintendo Wii Games</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+        <h4>Get Help</h4>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Shipping</a></li>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Payment Options</a></li>
+            </ul>
+        </div>
+    </div>    
     </div>
-  </footer>
+    <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
+</footer>
   </html>
