Major update across all pages
Made some changes to every page.
Validated every page except pages still being made (Index and about page - Will validate while finishing the pages.)

--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
     <header>
         <input type="checkbox" id="nav-checkbox">
         <label for="nav-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-        <nav>
+            <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            </ul>
-        </nav>
+                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            
+            </nav>
     </header>
 
         <main>
@@ -58,10 +58,11 @@
 
             <p>We are passionate about E-sports here at GameHub and we show our support by sponsoring several different gaming events every year. </p>
         </main>
-</body>
+
 <footer>
-    <div class="logo-footer">
+    <div class="logo">
         <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
+        </div>
     <hr>
     <div class="footer-row">
         <div class="footer-column">
@@ -104,4 +105,5 @@
     </div>
     <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
 </footer>
+</body>
 </html>
