--- a/index.html
+++ b/index.html
@@ -22,34 +22,47 @@
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>   
+                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>   
         </nav>
     </header>
+    
 <main>
-    <div class="banner">
-        <div class="image-border">
-            <img src="images/assassin-banner2.png" alt="Assassin Game Banner" class="banner-image" /></div>
-            <div class="banner-text">
-            <h2>Assassin</h2>
-            <h3>Through rough winds</h3>
-            <a href="product-page.html"><button id="btn">Buy</button></a><h3>$49</h3>
-            </div>
-        </div>
-    </div>
+<div class="featured-cta">
+<img src="images/Banner5.jpg" alt="Banner image - Assassin" class="banner-image">
+
+    <h1>Assassin</h1>
+    <h2>$49</h2>
+    <form action="/product-page.html">
+        <button type="submit" class="buy-btn">Buy now!</button>
+    </form>
+</div>
+
 
 <div class="orange-breakline"></div>
 <div class="information-line">
     <div class="download-info">
-    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icons"></i><h3>Very Fast</h3><p>Download & Play</p></section>
+    <i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icons"></i><h3>Very Fast</h3><p>Download & Play</p>
     </div>
     <div class="privacy-info">
-    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icons"></i><h3>Protected Privacy</h3><p>We value your privacy</p></section>
+    <i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icons"></i><h3>Protected Privacy</h3><p>We value your privacy</p>
     </div>
     <div class="customersupport-info">
-    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icons"></i><h3>Customer Support</h3><p>We are here to help you</p></section>
+    <i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icons"></i><h3>Customer Support</h3><p>We are here to help you</p>
     </div>
 </div>
 <div class="orange-breakline"></div>
+
+<section>
+    <div class="community-container">
+        <div class="community-info">
+        <p>Join our growing community of gamers!</p>
+        <p>Over 100.000 players online!</p>
+        <p>We have a community discord for gamers!</p>
+    </div>
+        <img src="images/online-gaming.jpg" class="onlinegaming-img" alt="Online Gaming Community">
+   
+    </div>
+</section>
 
 
 <ul class="carousel">
@@ -96,8 +109,9 @@
 </main>
     
 <footer>
-    <div class="logo-footer">
+    <div class="logo">
         <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
+        </div>
     <hr>
     <div class="footer-row">
         <div class="footer-column">
