--- a/contactus-confirm.html
+++ b/contactus-confirm.html
@@ -23,21 +23,22 @@
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </nav>
     </header>
 <main>
 <div class="message-confirmed">
     <h2>Thank you!  <i class="fa-solid fa-check" id="checkmark"></i></h2> 
-    <h3>We will get back to you as soon as one of our representatives have reviewed your message.</h3>
+    <h4>We will get back to you as soon as one of our representatives have reviewed your message.</h4>
     <p>Click <a class="goback-link" href="contact.html">here</a> to go back</p>
     <p>Go to <a class="goback-link" href="products.html">Games</a></p>
 </div>
     
 </main>
 <footer>
-    <div class="logo-footer">
+    <div class="logo">
         <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
+        </div>
     <hr>
     <div class="footer-row">
         <div class="footer-column">
@@ -77,8 +78,7 @@
             </ul>
         </div>
     </div>    
-    </div>
     <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
 </footer>
-    </body>
-    </html>
+</body>
+</html>
