--- a/products.html
+++ b/products.html
@@ -23,8 +23,7 @@
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="viewcart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            </ul>
+                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </nav>
     </header>
 <main>
@@ -35,51 +34,71 @@
     <div class="product-container">
         <div class="game game-1"><a href="product-page.html"><img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="productImage">
         <h3>Ping Pong</h3></a>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button type="submit" formaction="/product-page.html" class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-2"><img src="images/GameHub_covers2.jpg" alt="Super Duper" class="productImage">
         <h3>Super Duper</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-3"><img src="images/GameHub_covers3.jpg" alt="Black" class="productImage">
         <h3>Black</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-4"><img src="images/GameHub_covers4.jpg" alt="Furious" class="productImage">
         <h3>Furious</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-5"><img src="images/GameHub_covers5.jpg" alt="Assassin" class="productImage">
         <h3>Assassin</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-6"><img src="images/GameHub_covers6.jpg" alt="Space War" class="productImage">
         <h3>Space War</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-7"><img src="images/GameHub_covers7.jpg" alt="Racing" class="productImage">
         <h3>Racing</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-8"><img src="images/GameHub_covers8.jpg" alt="Boxer" class="productImage">
         <h3>Boxer</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-9"><img src="images/GameHub_covers9.jpg" alt="Cyberpunk" class="productImage">
         <h3>Cyberpunk</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form></div>
         <div class="game game-10"><img src="images/GameHub_covers10.jpg" alt="Forge Legend" class="productImage">
         <h3>Forge Legend</h3>
-        <button class="products-btn" id="cart-btn">Add to cart</button>
-        <button class="products-btn" id="buy-btn">Buy now</button></div>
-    </div>
-    
+        <form action="/product-page.html">
+        <button type="submit" formaction="/view-cart.html" class="products-btn">Add to cart</button>
+        <button class="products-btn">Buy now</button>
+        </form>
+    </div></div>   
 </section>
 </main>
 <footer>
-    <div class="logo-footer">
+    <div class="logo">
         <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
+        </div>
     <hr>
     <div class="footer-row">
         <div class="footer-column">
@@ -119,7 +138,6 @@
             </ul>
         </div>
     </div>    
-    </div>
     <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
 </footer>
 </body>
