--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     
 <main>
 <div class="featured-cta">
-<img src="images/Banner5.jpg" alt="Banner image - Assassin" class="banner-image">
-
+    <div class="cta-info">
     <h1>Assassin</h1>
     <h2>$49</h2>
     <form action="/product-page.html">
         <button type="submit" class="buy-btn">Buy now!</button>
     </form>
+    </div>
 </div>
 
 
@@ -71,43 +71,7 @@
     <li class="item"><img src="images/GameHub_covers7.jpg" class="carousel-img"></li>
     <li class="item"><img src="images/GameHub_covers9.jpg" class="carousel-img"></li>
 </ul>
-
-     <!--
-    <h1>The ultimate gaming marketplace</h1>
-
-
-    <img src="images/personplaying.jpg" alt="Person playing on a PC" class="personPlaying">
-    <h1>The universe of games</h1>
- </div>
-
-<div class="information-line">
-    <section><i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" style="color: #ff7a00;"></i>Very Fast</section>
-    <section><i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" style="color: #ff7a00;"></i>Protected Privacy</section>
-    <section><i class="customersupport-icon fa-regular fa-comments fa-4x" style="color: #ff7a00;"></i>Customer Support</section>
-</div>
-
- 
-</section>
-
-<section>
-
-   Make 4 divs instead of 2. topleft, topright, bottomleft, bottomright and then style the images so they center align and it looks good. 
-    <div class="bottomleft">
-        <img src="images/game1.jpg" class="bottomCta" alt="Assassin featured game on offer">
-        <img src="images/game2.jpg" class="bottomCta" alt="Cyberpunk featured game on offer">
-    </div>
-    <div class="bottomright">
-        <img src="images/forgelegend3.jpg" class="bottomCta" alt="Forge Legend game on offer">
-        <img src="images/game4.jpg" class="bottomCta" alt="Boxing featured game on offer">
-    </div>
-    <br />
-</section>
--->
-
-
-
-</main>
-    
+</main> 
 <footer>
     <div class="logo">
         <img src="images/GameHub_LogoFooter.png" alt="GameHub Logo">
