--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>   
+                <a href="view-cart.html" aria-label="Cart"><i class="fa-solid fa-cart-shopping"></i></a>   
         </nav>
     </header>
     
@@ -66,10 +66,10 @@
 
 
 <ul class="carousel">
-    <li class="item"><img src="images/GameHub_covers.jpg" class="carousel-img"></li>
-    <li class="item"><img src="images/GameHub_covers5.jpg" class="carousel-img"></li>
-    <li class="item"><img src="images/GameHub_covers7.jpg" class="carousel-img"></li>
-    <li class="item"><img src="images/GameHub_covers9.jpg" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers.jpg" alt="game hub covers" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers5.jpg" alt="game hub covers" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers7.jpg" alt="game hub covers" class="carousel-img"></li>
+    <li class="item"><img src="images/GameHub_covers9.jpg" alt="game hub covers" class="carousel-img"></li>
 </ul>
 </main> 
 <footer>
